# ppl_morality

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  experiment1_old.js  pyproject.toml  reproduce.py
LLM/: README.md  gpt4_baseline.py  gpt4_experiment1_with_sign.py  gpt4_experiment1_without_sign.py  gpt4_experiment2_with_sign.py  gpt4_experiment2_without_sign.py
data/human/: README.md
data/trajectories/: map1_2.json  map1_3.json  map1_4.json  map1_5.json  map1_6.json  map1_7.json
docs/: MODEL.md
experiments/: _common.py  compare_model_human.py  make_fig1_trajectories.py  run_experiment2.py  run_experiment4.py  run_fragility.py
models/: model_aug14.py  model_aug8.py  package-lock.json  simplified_simulation_results.txt  simulation_results.txt  sophisticated_model_aug8.py  trajectories_policies.jsonl  webppl_model_july.wppl  webppl_model_v1.js
models/astar_model/: combined_simulation_results.txt  simulate_3_agents.py  trajectories_policies.jsonl
models/aug16_modeling/: simulate_3_agents_aug16.py  trajectory_visualizer.py
models/exp2_model/: Experiment2_Pilot.csv  model.py  plot.py
models/exp4_model/: backup_sep20.py  exp4_model.py  exp4_poisson_goals.py
models/experimental_model/: averaged_posterior_probabilities_a friend.csv  averaged_posterior_probabilities_ice cream.csv  averaged_posterior_probabilities_pain.csv  (+34 more)
old_pilot_stimuli/: all_maps.py  map_generator.py
stimuli/: stimuli_generator.py  textual_context.txt
tests/: conftest.py  test_gridworld.py  test_inference.py  test_priors.py  test_trajectory.py
(+116 files in other folders)
