[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moral-rules"
version = "1.0.0"
description = "Computational model of moral-rule interpretation ('keep off the grass'), Kwon, Wong, Tenenbaum & Levine (CogSci 2025)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joe Kwon" },
    { name = "Lio Wong" },
    { name = "Josh Tenenbaum" },
    { name = "Sydney Levine" },
]
keywords = ["cognitive-science", "moral-cognition", "computational-modeling", "rule-interpretation"]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.13,<0.14",
    "tqdm>=4.65,<5.0",
]

[project.optional-dependencies]
# Exploratory GPT-4o baseline (NOT part of the accepted CogSci 2025 paper).
llm = [
    "openai>=1.0,<2.0",
    "tenacity>=8.2,<9.0",
]
dev = [
    "pytest>=7.4,<9.0",
    "ruff>=0.5,<1.0",
    "black>=24.0,<25.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
